Kiwix 0.9 alpha1
* Command line indexation tool: kiwix-index
* Allow drag&drop to open a ZIM file
* Autodection of the UI locale at the first start
* New "Recently open" menu
* Introduction of the library
* Use xapian-core-1.0.16
* Hebrew localization
* Portuguese localization
* Chinese localization
* Persian localization
* Bookmarks and Notes (experimental)
* Introduction of kiwix-compact.sh (ID: 2834599)
* Translate ISO code in the language sub-menu (ID: 2834600)
* Save Page as file (ID: 175508)
* kiwix.sh check for current path (ID: 2850487)
* First result is now only loaded with a pretty good score (ID: 2845850)
* "Report a bug" and "request a feature" links in the UI
* Fixing issue affecting ZIM file loading with accented paths (ID: 2905488)

Kiwix 0.8 rc3
* Small improvement by the kiwix.sh launcher (should work now under Slackware (see https://sourceforge.net/forum/message.php?msg_id=7561932)
* Fix sporadic segfault by indexing (ID: 2823597)
* Fix dynlib linking issue affecting at least Slackware and Fedora

Kiwix 0.8 rc2
* Use xapian-core-1.0.14
* Fix the "no icons available" issue (ID: 2830824)
* Fixed toolbar icons with RTL languages
* Improved toolbar UI (added icons & tooltip)
* Fixed window size/position restore
* Fixed address-bar not displaying TOC URLs (ID: 2806208)
* Fixed anchored link not working (ID: 2806207)
 
Kiwix 0.8 rc1
* High reducing of the xapian index disk usage
* Improvement of the history management
* Ignore now, by indexing, HTML pages with the NOINDEX meta tag
* French/Spanish/German translation of the software help
* Fixed language switch menu (ID: 2822178)
* Arabic localization
* Use now mainly xulrunner icon set

Kiwix 0.8 beta5
* Small improvements of the Spanish translations&shortcuts
* Bug fix by the indexing process observer (ID: 2811642)
* Add a gray version of the buttons
* First version of a software help
* Add a cache strategy

Kiwix 0.8 beta4
* Random page feature (ID: 2799134)